<resources>
    <string name="cuisine">Cuisine</string>
    <string name="title">Title</string>
    <string name="ingrediens">INGREDIENS</string>
    <string name="app_label">Delicious dishes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingsLabel">Filter</string>
    <string name="settingsLabel2">Sort alphabetically</string>
    <string name="sortItems1">Ascending</string>
    <string name="sortItems2">Descending</string>
    <string name="apply">Apply</string>

    <!-- Strings in application -->
    <string name="error_empty_meal">There is nothing to see here</string>
    <string name="error_wrong_id">Wrong id of dish</string>
    <string name="error_cant_load_meal">Error: Can\'t load meal model</string>
    <string name="error_cant_load_categories">Error: Can\'t load categories</string>
    <string name="error_cant_load_meal_list">Error: Can\'t load meal list</string>
    <string name="empty">Unknown</string>
    <string name="empty_instructions">No instructions</string>
    <string name="ingredient">%s - %s</string>
</resources>