<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/detail_image_height"
    app:cardCornerRadius="@dimen/corners_radius"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/detail_margin"
        android:paddingRight="@dimen/detail_margin">

        <androidx.cardview.widget.CardView
            android:id="@+id/swipe"
            android:layout_width="@dimen/pick_stick_width"
            android:layout_height="@dimen/pick_stick_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/type_image_margin"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardBackgroundColor="@color/pick_stick" />

        <TextView
            android:id="@+id/Cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/cuisine"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/meal_detail_small_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title"
            android:textSize="@dimen/large_font_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag"
            android:layout_marginTop="@dimen/details_marin_top_small"
            android:layout_marginBottom="@dimen/details_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_types_list_height"
            tools:listitem="@layout/item_food_type"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pick_stick" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            android:fontFamily="@font/roboto"
            android:text="@string/ingrediens"
            android:textSize="@dimen/medium_font_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/detail_margin"
            tools:listitem="@layout/ingredient_item" />

    </LinearLayout>
</androidx.cardview.widget.CardView>